c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/extra_credit/goto_label_multiple_functions.c
/* The same label can be used in multiple functions */
int foo(void) {
    goto label;
    return 0;
    label:
        return 5;
}

int main(void) {
    goto label;
    return 0;
    label:
        return foo();
}