c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_parse/function_call_declaration.c
int foo(int a) {
    return 0;
}

int main(void) {
    /* A function argument must be an expression, not a declaration */
    return foo(int a);
}